Сетка для планшета

--- a/source/index.html
+++ b/source/index.html
@@ -15,9 +15,9 @@
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
         <div class="main-nav__wrapper">
-          <div class="main-nav__left-column">
-            <div class="main-nav__tablet-space">
-            </div>
+          <!-- <div class="main-nav__left-column"> -->
+<!--             <div class="main-nav__tablet-space">
+            </div> -->
             <ul class="main-nav__list site-nav">
               <li class="site-nav__item">
                 <a href="catalog.html">Каталог товаров</a>
@@ -34,8 +34,8 @@
                 <a href="">Распродажа</a>
               </li>
             </ul>
-          </div>
-          <div class="main-nav__right-column">
+          <!-- </div> -->
+          <!-- <div class="main-nav__right-column"> -->
             <ul class="main-nav__list user-nav">
               <li class="user-nav__item user-nav__search">
                 <a class="search" href=""><span>Поиск по сайту</span></a>
@@ -47,7 +47,7 @@
             <p class="user-nav__delivery">
               Бесплатная доставка по России
             </p>
-          </div>
+          <!-- </div> -->
         </div>
       </nav>
     </header>
