--- a/source/index.html
+++ b/source/index.html
@@ -15,9 +15,6 @@
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
         <div class="main-nav__wrapper">
-          <!-- <div class="main-nav__left-column"> -->
-<!--             <div class="main-nav__tablet-space">
-            </div> -->
             <ul class="main-nav__list site-nav">
               <li class="site-nav__item">
                 <a href="catalog.html">Каталог товаров</a>
@@ -34,8 +31,6 @@
                 <a href="">Распродажа</a>
               </li>
             </ul>
-          <!-- </div> -->
-          <!-- <div class="main-nav__right-column"> -->
             <ul class="main-nav__list user-nav">
               <li class="user-nav__item user-nav__search">
                 <a class="search" href=""><span>Поиск по сайту</span></a>
@@ -47,7 +42,6 @@
             <p class="user-nav__delivery">
               Бесплатная доставка по России
             </p>
-          <!-- </div> -->
         </div>
       </nav>
     </header>
@@ -103,12 +97,11 @@
                 </td>
               </tr>
             </table>
-            <img class="weekly-goods__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Товар недели: корзинка">
             <p class="weekly-goods__price">Цена: 990 руб.</p>
             <a class="btn weekly-goods__btn" href="">Заказать</a>
           </div>
           <div class="weekly-goods__image-contaner">
-            <img class="weekly-goods__image-tablet" src="img/triple-set-tablet@1x.jpg" width="333" height="404" alt="Товар недели: корзинка">
+            <img class="weekly-goods__image" src="img/triple-set-tablet@1x.jpg" width="333" height="404" alt="Товар недели: корзинка">
           </div>
         </div>
       </section>
