--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
                 <a href="form.html">Вязание на заказ</a>
               </li>
             </ul>
-            <ul class="main-nav__stock stock-nav">
+            <ul class="main-nav__list stock-nav">
               <li class="stock-nav__item">
                 <a href="">Новые поступления</a>
               </li>
