--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="main-header__logo">
+      <a href="index.html" class="main-header__logo">
         <img class="main-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин &laquo;Мишка&raquo;">
       </a>
       <nav class="main-nav">
