--- a/source/catalog.html
+++ b/source/catalog.html
@@ -47,12 +47,12 @@
     </header>
     <main class="page-main">
       <header class="page-header">
-      <h1 class="page-header__title">Каталог товаров</h1>
+        <h1 class="page-header__title">Каталог товаров</h1>
       </header>
       <section class="catalog-items">
         <ul class="catalog-items__list catalog-assortment">
           <li class="catalog-assortment__item good">
-            <a class="good__image" href=""><img src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Изображение товара:кролик"></a>
+            <a class="good__image" href=""><img src="img/photo-hare-mobile@1x.jpg" alt="Изображение товара:кролик"></a>
             <div class="good__info-container">
               <h2 class="good__title">Зайчик-попрыгайчик</h2>
               <p class="good__description">Рост 30 см, вес 200 г</p>
@@ -65,7 +65,7 @@
           </div>
           </li>
           <li class="catalog-assortment__item good">
-            <a class="good__image" href=""><img src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Изображение товара:корзина"></a>
+            <a class="good__image" href=""><img src="img/photo-bowl-mobile@1x.jpg" alt="Изображение товара:корзина"></a>
             <div class="good__info-container">
               <h2 class="good__title">Корзинка для белья</h2>
               <p class="good__description">Диаметр 15 см, высота 10 см</p>
@@ -78,7 +78,7 @@
             </div>
           </li>
           <li class="catalog-assortment__item good">
-            <a class="good__image" href=""><img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Изображение товара:корзина для игрушек"></a>
+            <a class="good__image" href=""><img src="img/photo-toys-mobile@1x.jpg" alt="Изображение товара:корзина для игрушек"></a>
             <div class="good__info-container">
             <h2 class="good__title">Большая корзинка для игрушек</h2>
               <p class="good__description">Диаметр 30 см, высота 30 см</p>
