--- a/source/index.html
+++ b/source/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header main-header--index">
       <a class="main-header__logo">
         <img class="main-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин &laquo;Мишка&raquo;">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--index">
         <div class="main-nav__toggle-contatainer">
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
