--- a/source/index.html
+++ b/source/index.html
@@ -173,6 +173,9 @@
     </main>
     <footer class="main-footer">
       <div class="main-footer__container">
+      <a class="main-footer__logo">
+        <img class="main-footer__logo-img" src="img/logo-tablet.svg">
+      </a>
         <ul class="main-footer__social social-list">
           <li class="social-list__item social-list__item--insta"><a class="visually-hidden" href="">Instagram</a></li>
           <li class="social-list__item social-list__item--fb"><a class="visually-hidden" href="">Facebook</a></li>
