Работа над сетками

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,7 +54,7 @@
           <li class="catalog-assortment__item good">
             <a class="good__image" href=""><img src="img/photo-hare-mobile@1x.jpg" alt="Изображение товара:кролик"></a>
             <div class="good__info-container">
-              <h2 class="good__title">Зайчик-попрыгайчик</h2>
+              <h2 class="good__title"><a>Зайчик-попрыгайчик</a></h2>
               <p class="good__description">Рост 30 см, вес 200 г</p>
               <p class="good__bottom">
                 <span class="good__price">1 200 руб.</span>
@@ -67,7 +67,7 @@
           <li class="catalog-assortment__item good">
             <a class="good__image" href=""><img src="img/photo-bowl-mobile@1x.jpg" alt="Изображение товара:корзина"></a>
             <div class="good__info-container">
-              <h2 class="good__title">Корзинка для белья</h2>
+              <h2 class="good__title"><a>Корзинка для белья</a></h2>
               <p class="good__description">Диаметр 15 см, высота 10 см</p>
               <p class="good__bottom">
                 <span class="good__price">690 руб.</span>
@@ -80,7 +80,7 @@
           <li class="catalog-assortment__item good">
             <a class="good__image" href=""><img src="img/photo-toys-mobile@1x.jpg" alt="Изображение товара:корзина для игрушек"></a>
             <div class="good__info-container">
-            <h2 class="good__title">Большая корзинка для игрушек</h2>
+            <h2 class="good__title"><a>Большая корзинка для игрушек</a></h2>
               <p class="good__description">Диаметр 30 см, высота 30 см</p>
               <p class="good__bottom">
                 <span class="good__price">1 500 руб.</span>
@@ -100,7 +100,7 @@
               <source src="#" type="video/mishka-video.ogg">
               <source src="#" type="video/mishka-video.webm">
             </video>
-          <button class="catalog-video__btn">Запустить видео</button>
+          <button class="catalog-video__btn" type="button">Запустить видео</button>
         </div>
         <p class="production__description">
           По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том,
@@ -112,7 +112,7 @@
     <footer class="main-footer">
       <div class="main-footer__container">
         <a class="main-footer__logo">
-          <img class="main-footer__logo-img" src="img/logo-tablet.svg">
+          <img class="main-footer__logo-img" src="img/logo-tablet.svg" alt="Мишка">
         </a>
         <ul class="main-footer__social social-list">
           <li class="social-list__item social-list__item--insta"><a class="visually-hidden" href="">Instagram</a></li>
@@ -126,7 +126,6 @@
           </a>
         </div>
       </div>
-    </footer>
     </footer>
     <div class="overlay">
       <section class="modal-add-item">
