--- a/source/form.html
+++ b/source/form.html
@@ -56,7 +56,7 @@
         </p>
         <fieldset class="form-sorting__fieldset order-fieldset">
           <div class="order-fieldset__container">
-            <legend class="order-fieldset__legend">Тип</legend>
+            <legend class="order-fieldset__legend"><span>Тип</span></legend>
             <ul class="order-fieldset__list">
               <li class="order-fieldset__item">
                 <input class="visually-hidden filter-input-radio" type="radio" name="radioSort" value="accessory-sort" id="accessory" checked>
@@ -71,7 +71,7 @@
         </fieldset>
         <fieldset class="form-sorting__fieldset order-fieldset order-fieldset-grey">
           <div class="order-fieldset__container">
-            <legend class="order-fieldset__legend">Цвет</legend>
+            <legend class="order-fieldset__legend"><span>Цвет</span></legend>
             <ul class="order-fieldset__list order-fieldset__color-list">
               <li class="order-fieldset__item  order-fieldset__color-item">
                 <input class="visually-hidden filter-input-checkbox" type="checkbox" name="white-color" id="filter-white" checked>
@@ -102,7 +102,7 @@
         </fieldset>
         <fieldset class="form-sorting__fieldset order-fieldset">
           <div class="order-fieldset__container">
-            <legend class="order-fieldset__legend">ФИО</legend>
+            <legend class="order-fieldset__legend"><span>ФИО</span></legend>
             <ul class="order-fieldset__list">
               <li class="order-fieldset__item">
                 <label class="field-label" for="customer-name">Имя:</label>
@@ -121,14 +121,14 @@
         </fieldset>
         <fieldset class="form-sorting__fieldset order-fieldset order-fieldset-grey">
           <div class="order-fieldset__container order-fieldset__container--contact">
-            <legend class="order-fieldset__legend">ТЕЛ</legend>
+            <legend class="order-fieldset__legend"><span>ТЕЛ</span></legend>
             <label class="field-label visually-hidden" for="customer-phone">Телефон</label>
             <input type="tel" name="phone-number" id="customer-phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
           </div>
         </fieldset>
         <fieldset class="form-sorting__fieldset order-fieldset order-fieldset-grey">
           <div class="order-fieldset__container order-fieldset__container--contact">
-            <legend class="order-fieldset__legend">E-MAIL</legend>
+            <legend class="order-fieldset__legend"><span>E-MAIL</span></legend>
             <label class="field-label visually-hidden" for="customer-email">Электронная почта</label>
             <input type="email" name="email" id="customer-email" placeholder="Ваш Email*">
           </div>
@@ -136,7 +136,7 @@
         <div class="form-sorting__additional-contaner">
           <fieldset class="form-sorting__fieldset form-sorting__fieldset--bottom order-fieldset">
             <div class="order-fieldset__container order-fieldset__container--contact">
-              <legend class="order-fieldset__legend">Доп</legend>
+              <legend class="order-fieldset__legend"><span>Доп</span></legend>
               <label class="field-label visually-hidden" for="customer-comment">Комментарий к заказу</label>
               <textarea name="comment" id="customer-comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
