--- a/source/index.html
+++ b/source/index.html
@@ -52,12 +52,12 @@
         <p class="directions__info">Милые штуки ручной работы для дома</p>
         <ul class="directions__list">
           <li class="directions__item">
-            <a class="directions__link">
+            <a class="directions__link" href="">
               <span>Предметы интерьера</span>
             </a>
           </li>
           <li class="directions__item">
-            <a class="directions__link">
+            <a class="directions__link" href="">
               <span>Детские игрушки</span>
             </a>
           </li>
@@ -174,7 +174,7 @@
     <footer class="main-footer">
       <div class="main-footer__container">
       <a class="main-footer__logo">
-        <img class="main-footer__logo-img" src="img/logo-tablet.svg">
+        <img class="main-footer__logo-img" src="img/logo-tablet.svg" alt="Мишка">
       </a>
         <ul class="main-footer__social social-list">
           <li class="social-list__item social-list__item--insta"><a class="visually-hidden" href="">Instagram</a></li>
