--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,11 @@
   <body>
     <header class="main-header main-header--index">
       <a class="main-header__logo">
-        <img class="main-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин &laquo;Мишка&raquo;">
+        <picture>
+          <source media="(min-width: 1050px)" srcset="img/logo-desktop.svg" width="149px" height="89px" >
+          <source media="(min-width: 668px)" srcset="img/logo-tablet.svg" width="113px" height="46px">
+          <img class="main-header__logo-image" src="img/logo-mobile.svg"  alt="Магазин &laquo;Мишка&raquo;">
+        </picture>
       </a>
       <nav class="main-nav main-nav--index">
         <div class="main-nav__toggle-contatainer">
@@ -101,7 +105,11 @@
             <a class="btn weekly-goods__btn" href="">Заказать</a>
           </div>
           <div class="weekly-goods__image-contaner">
-            <img class="weekly-goods__image" src="img/triple-set-tablet@1x.jpg" width="333" height="404" alt="Товар недели: корзинка">
+            <picture>
+              <source media="(min-width: 1050px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop.jpg 2x" >
+              <source media="(min-width: 668px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@1x.jpg 2x" >
+              <img class="weekly-goods__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" width=  alt="Товар недели: корзинка">
+            </picture>
           </div>
         </div>
       </section>
